--- a/SEA_Application/Views/Account/Login.cshtml
+++ b/SEA_Application/Views/Account/Login.cshtml
@@ -196,7 +196,7 @@
 
 
                 <div class="col-md-8 col-lg-8 col-sm-8 split-layout-right">
-                    <img style="width:100%;height:100%" src="~/Content/Images/oalogo.jpeg" />
+                    <img style="width:auto;height:95%" src="~/Content/Images/OA_Cover.JPG" class="col-md-offset-2 col-lg-offset-2"/>
                 </div>
             </div>
         </div>
