--- a/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
+++ b/SEA_Application/Views/Shared/_AdminDashboardLayout.cshtml
@@ -362,13 +362,13 @@
                         <div class="col-md-12">
                             <div class="pageHeading">
                                 <div class="row">
-                                    <div class="col-sm-12 col-md-3 col-lg-3">
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
 
                                         <h1 id="PageHeader" class="float-left"></h1>
 
                                     </div>
                                     <div class="col-sm-12 col-md-9 col-lg-9 hidden" id="generic_div">
-                                            <button type="button" class="btn btn-primary pull-right rounded rounded-lg createBtn">Create</button>
+                                            <button type="button" id="global_create" class="btn btn-primary pull-right rounded rounded-lg createBtn">Create</button>
                                             <input type="text" placeholder="Type Keyword" id="global_filter" class="searchBox pull-right pl-4 p-2 pull-right rounded rounded-lg   mr-3">
                                         </div>
                                 </div>
