--- a/SEA_Application/Views/AspnetSubjectTopics/Edit.cshtml
+++ b/SEA_Application/Views/AspnetSubjectTopics/Edit.cshtml
@@ -250,7 +250,7 @@
 
                     <div class="col-md-8 pl-5 pr-5 ">
 
-                        <button id="CreateLesson" type="button" class="btn btn-success rounded rounded-lg"> Create Lesson </button>
+                        <button id="CreateLesson" type="button" class="btn btn-primary rounded rounded-lg"> Create Lesson </button>
 
                         <button type="submit" class="btn btn-primary rounded rounded-lg"> Update </button>
 
