--- a/SEA_Application/Views/AspnetSubjectTopics/ViewTopicsAndLessons.cshtml
+++ b/SEA_Application/Views/AspnetSubjectTopics/ViewTopicsAndLessons.cshtml
@@ -6,10 +6,13 @@
 }
 <script>
     $(document).ready(function () {
-     //   $("#example").dataTable();
-      //  var table = $("#example1").dataTable();
 
-            var table = $('#datatable').dataTable({
+        $("#PageHeader").html("Topics And Lessons");
+
+        $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
+        $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Topics And Lessons</a></li>');
+
+        var table = $('#datatable').dataTable({
                     buttons: [
                         {
                             text: '<span class="datatableButtonsReset"> <img src="/Content/assets/assets/icons/Icon-Reset2.png" alt=""> Reset</span>'
@@ -44,7 +47,7 @@
                         "<'row mt-4'<'col-sm-12 col-md-4 col-lg-6 infoCon'i><'col-sm-12 col-md-8 col-lg-6 pagCon'p>>",
                 });
         
-            var table1 = $('#datatable1').dataTable({
+        var table1 = $('#datatable1').dataTable({
                     buttons: [
                         {
                             text: '<span class="datatableButtonsReset"> <img src="/Content/assets/assets/icons/Icon-Reset2.png" alt=""> Reset</span>'
@@ -79,15 +82,7 @@
                         "<'row mt-4'<'col-sm-12 col-md-4 col-lg-6 infoCon'i><'col-sm-12 col-md-8 col-lg-6 pagCon'p>>",
                 });
 
-
-             $("#PageHeader").html("Topics And Lessons");
-
-                $("#BreadCrumbs").append(' <li> <a href="/Account/Dashboard"> Home </a> <span>&gt;</span></li>');
-                $("#BreadCrumbs").append(' <li class="active"><a id="BreadCrumps1" href="#">Topics And Lessons</a></li>');
-
-
-
-
+        $("#datatable1_filter").hide();
 
         $('.table').on('click', 'tbody tr', function () {
             var td = $(this).children("td");
@@ -135,241 +130,164 @@
             }
         })
     })
-
-    function DrawTable() {
-        $('#example_filter').addClass("form-group");
-        $('#example_filter').addClass("has-feedback");
-        $('#example_length').addClass("col-lg-9 col-md-8 col-sm-12 col-xs-12");
-        //$('#example_filter').addClass("col-lg-4 col-md-4 col-sm-12 col-xs-12");
-        $('#example_wrapper').css("text-align", "left");
-        $('#example_length').css("text-align", "left");
-        $('#example_length label').addClass("col-md-3 col-sm-12 col-lg-2");
-        $("#example_length label").css("text-align", "left");
-        $('#example_length label').addClass("col-md-2 col-lg-2 col-sm-12");
-        // // $('#example_length label select').addClass("col-md-3 col-sm-8 col-lg-3"); : auto;
-        $('#example_filter input').css({ "border": "1px solid #ddd", "border-radius": "40px", "height": "30px", "margin-top": "-5px", "outline": "none", "padding-left": "10px", "color": "#000000 !important" });
-        //$('#example_length').css({ "overflow": "auto" });
-        $('#example_filter input').addClass("add");
-        $('#example_filter').append('<span class="glyphicon glyphicon-search form-control-feedback" style="margin-top: -33px; color: #666;"></span>');
-        var list = $("#SubjectID").html();
-        $('#example_length').append(
-
-            '<div class="col-md-1" style="width:0%; padding-left:1px;">' +
-            '<div class="d-bar"></div>' +
-            '</div>'
-            +
-            '<div class="col-md-5 col-lg-3" style="padding-left:0px">' +
-            '<div class="col-md-1 col-sm-3 col-xs-3" style="padding-left:0px"><a href=""><i class="glyphicon glyphicon-repeat" data-toggle="tooltip" title="Refresh" data-placement="bottom"></i></a></div>' +
-            '<div class="col-md-1 col-sm-3 col-xs-3"><a href="/AspnetSubjectTopics/Create"><i class="glyphicon glyphicon-edit" data-placement="bottom"></i></a></div>' +
-            '<div class="col-md-1 col-sm-3 col-xs-3"><a href=""><span style="color:gray"><i class="glyphicon glyphicon-download-alt" data-placement="bottom"></i></span></a></div>' +
-            ' <div class="col-md-1 col-sm-3 col-xs-3"><a href=""><span style="color:gray"><i class="fa fa-ban"  data-placement="bottom"></i></span>' + '</a></div>' +
-            '<div class="col-md-1" padding-left:10px;">' +
-            '<div class="d-bar"></div>' +
-            '</div>' +
-            '</div>');
-        $("#Class").prepend("<option value='0'>All</option>");
-    }
-
-    function DrawTable1() {
-        $('#example1_filter').addClass("form-group");
-        $('#example1_filter').addClass("has-feedback");
-        $('#example1_length').addClass("col-lg-9 col-md-8 col-sm-12 col-xs-12");
-        //$('#example1_filter').addClass("col-lg-4 col-md-4 col-sm-12 col-xs-12");
-        $('#example1_wrapper').css("text-align", "left");
-        $('#example1_length').css("text-align", "left");
-        $('#example1_length label').addClass("col-md-3 col-sm-12 col-lg-2");
-        $("#example1_length label").css("text-align", "left");
-        $('#example1_length label').addClass("col-md-2 col-lg-2 col-sm-12");
-        // // $('#example1_length label select').addClass("col-md-3 col-sm-8 col-lg-3"); : auto;
-        $('#example1_filter input').css({ "border": "1px solid #ddd", "border-radius": "40px", "height": "30px", "margin-top": "-5px", "outline": "none", "padding-left": "10px", "color": "#000000 !important" });
-        //$('#example1_length').css({ "overflow": "auto" });
-        $('#example1_filter input').addClass("add");
-        $('#example1_filter').append('<span class="glyphicon glyphicon-search form-control-feedback" style="margin-top: -33px; color: #666;"></span>');
-        var list = $("#SubjectID").html();
-        $('#example1_length').append(
-
-            '<div class="col-md-1" style="width:0%; padding-left:1px;">' +
-            '<div class="d-bar"></div>' +
-            '</div>'
-            +
-            '<div class="col-md-5 col-lg-3" style="padding-left:0px">' +
-            '<div class="col-md-1 col-sm-3 col-xs-3" style="padding-left:0px"><a href=""><i class="glyphicon glyphicon-repeat" data-toggle="tooltip" title="Refresh" data-placement="bottom"></i></a></div>' +
-            '<div class="col-md-1 col-sm-3 col-xs-3"><a href="/AspnetLessons/Create"><i class="glyphicon glyphicon-edit" data-placement="bottom"></i></a></div>' +
-            '<div class="col-md-1 col-sm-3 col-xs-3"><a href=""><span style="color:gray"><i class="glyphicon glyphicon-download-alt" data-placement="bottom"></i></span></a></div>' +
-            ' <div class="col-md-1 col-sm-3 col-xs-3"><a href=""><span style="color:gray"><i class="fa fa-ban"  data-placement="bottom"></i></span>' + '</a></div>' +
-            '<div class="col-md-1" padding-left:10px;">' +
-            '<div class="d-bar"></div>' +
-            '</div>' +
-            '</div>');
-        $("#Class").prepend("<option value='0'>All</option>");
-    }
-
-
 </script>
 
 
-    
-<div class="nav-tabs-custom">
-    <ul class="nav nav-tabs">
-        <li class="active"><a href="#tab_1" data-toggle="tab">Topics</a></li>
-        <li><a href="#tab_2" data-toggle="tab">Lessons</a></li>
+<div class="tabsCon">
+    <!-- Nav tabs -->
+    <ul class="nav nav-tabs" id="myTabAttr" role="tablist">
+        <li class="nav-item">
+            <a class="nav-link active" id="Topics-tab-attr" data-toggle="tab" href="#Topics-attr" role="tab" aria-controls="Topics-attr"
+               aria-selected="true">Topics</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" id="Lessons-tab-attr" data-toggle="tab" href="#Lessons-attr" role="tab" aria-controls="Lessons-attr"
+               aria-selected="false">Lessons</a>
+        </li>
     </ul>
-</div>
 
 
+    <div class="card">
+        <div class="card-body p-4">
+            <div class="tab-content" style="padding: 10px 0px 0px 0px;">
 
-<div class="card">
-    <div class="card-body p-4">
-        <div class="tab-content" style="  padding: 10px 0px 0px 0px; ">
-
-            <div class="tab-pane active" id="tab_1">
-                <div class="box box-primary">
-                    <div class="box-body">
-                        <div class="box-title"></div>
-                        <div class="table-responsive">
-                        <table class="table hover table-striped table-bordered" id="datatable">
-
-                            @*<p>
-                    @Html.ActionLink("Create New", "Create")
-                </p>*@
-
-                            <thead>
-
-                                <tr>
-                                    <th style="display:none">  11</th>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.Name)
-                                    </th>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.Description)
-                                    </th>
-                                    @*<th>
-                            @Html.DisplayNameFor(model => model.StartDate)
-                        </th>
-                        <th>
-                            @Html.DisplayNameFor(model => model.EndDate)
-                        </th>*@
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.FAQ)
-                                    </th>
-                                    <th>
-                                        @Html.DisplayNameFor(model => model.GenericSubject.SubjectName)
-                                    </th>
-                                    @*<th></th>*@
-                                </tr>
-
-                            </thead>
-
-
-
-                            <tbody>
-
-                                @foreach (var item in Model)
-                                {
-                                    <tr>
-                                        <td style="display:none">
-
-                                            @item.Id
-                                        </td>
-
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Name)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.Description)
-                                        </td>
-                                        @*<td>
-                                @Html.DisplayFor(modelItem => item.StartDate)
-                            </td>
-                            <td>
-                                @Html.DisplayFor(modelItem => item.EndDate)
-                            </td>*@
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.FAQ)
-                                        </td>
-                                        <td>
-                                            @Html.DisplayFor(modelItem => item.GenericSubject.SubjectName)
-                                        </td>
-                                        @*<td>
-                                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
-                                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
-                            </td>*@
-                                    </tr>
-                                }
-
-                            </tbody>
-                        </table>
-                    </div>
-
-                </div>
-
-                </div>
-
-
-            </div>
-
-
-            <div class="tab-pane" id="tab_2">
-
-                <div class="box box-primary">
-                    <div class="box-title"></div>
-                    <div class="box-body">
-                        <div class="col-md-12">
+                <div class="tab-pane active show" id="Topics-attr" role="tabpanel" aria-labelledby="Topics-tab-attr">
+                    <div class="box box-primary">
+                        <div class="box-body">
+                            <div class="box-title"></div>
                             <div class="table-responsive">
+                                <table class="table hover table-striped table-bordered" id="datatable">
 
-                                <table class="table1 hover table-striped table-bordered" id="datatable1">
+                                    @*<p>
+                                @Html.ActionLink("Create New", "Create")
+                            </p>*@
+
                                     <thead>
-                                        <tr>
-                                            @*<th>  ID</th>*@
-                                            <th>
-                                                Name
-                                            </th>
-                                            <th>
-                                                Video Url
-                                            </th>
-                                            <th>
-                                                Description
-                                            </th>
-                                            <th>
-                                                Duration Minutes
-                                            </th>
-                                            <th>
-                                                Topic Name
-                                            </th>
 
+                                        <tr>
+                                            <th style="display:none">  11</th>
+                                            <th>
+                                                @Html.DisplayNameFor(model => model.Name)
+                                            </th>
+                                            <th>
+                                                @Html.DisplayNameFor(model => model.Description)
+                                            </th>
+                                            @*<th>
+                                        @Html.DisplayNameFor(model => model.StartDate)
+                                    </th>
+                                    <th>
+                                        @Html.DisplayNameFor(model => model.EndDate)
+                                    </th>*@
+                                            <th>
+                                                @Html.DisplayNameFor(model => model.FAQ)
+                                            </th>
+                                            <th>
+                                                @Html.DisplayNameFor(model => model.GenericSubject.SubjectName)
+                                            </th>
+                                            @*<th></th>*@
                                         </tr>
+
                                     </thead>
-                                    <tbody id="LessonsList">
+
+
+
+                                    <tbody>
+
+                                        @foreach (var item in Model)
+                                        {
+                                            <tr>
+                                                <td style="display:none">
+
+                                                    @item.Id
+                                                </td>
+
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.Name)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.Description)
+                                                </td>
+                                                @*<td>
+                                            @Html.DisplayFor(modelItem => item.StartDate)
+                                        </td>
+                                        <td>
+                                            @Html.DisplayFor(modelItem => item.EndDate)
+                                        </td>*@
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.FAQ)
+                                                </td>
+                                                <td>
+                                                    @Html.DisplayFor(modelItem => item.GenericSubject.SubjectName)
+                                                </td>
+                                                @*<td>
+                                            @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                                            @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                        </td>*@
+                                            </tr>
+                                        }
+
                                     </tbody>
                                 </table>
                             </div>
 
-
-
-
-
                         </div>
+
                     </div>
+
+
                 </div>
 
 
+                <div class="tab-pane" id="Lessons-attr" role="tabpanel" aria-labelledby="Lessons-tab-attr">
+
+                    <div class="box box-primary">
+                        <div class="box-title"></div>
+                        <div class="box-body">
+                            <div class="col-md-12">
+                                <div class="table-responsive">
+
+                                    <table class="table1 hover table-striped table-bordered" id="datatable1">
+                                        <thead>
+                                            <tr>
+                                                @*<th>  ID</th>*@
+                                                <th>
+                                                    Name
+                                                </th>
+                                                <th>
+                                                    Video Url
+                                                </th>
+                                                <th>
+                                                    Description
+                                                </th>
+                                                <th>
+                                                    Duration Minutes
+                                                </th>
+                                                <th>
+                                                    Topic Name
+                                                </th>
+
+                                            </tr>
+                                        </thead>
+                                        <tbody id="LessonsList"></tbody>
+                                    </table>
+                                </div>
 
 
-            </div><!--End of Tab 2-->
 
+
+
+                            </div>
+                        </div>
+                    </div>
+
+
+
+
+                </div><!--End of Tab 2-->
+
+            </div>
         </div>
     </div>
+
 </div>
-        <script>
-            $(document).ready(function () {
-
-
-
-            })//end of document ready
-
-
-
-
-
-        </script>
