--- a/SEA_Application/Views/Student_Dashboard/BlankPage.cshtml
+++ b/SEA_Application/Views/Student_Dashboard/BlankPage.cshtml
@@ -591,10 +591,11 @@
         <div class="card">
             <div class="card-body p-5">
                 <div class="row">
-                    <iframe id="ifm" onload="this.style.height=(this.contentWindow.document.body.scrollHeight+20)+'px';"  src="https://pro.ispringcloud.com/acc/0dBmDbE0ODAyMA/s/48020-M12rY-vxDh4-NSGe4?mail_id=31&tx=0&from=email" frameborder="0" border="0" allowtransparency="true" allowfullscreen="1" style="border: none; background-color: transparent; width: 100%; overflow:auto"></iframe>
+                    <iframe id="ifm" onload="this.style.height=(this.contentWindow.document.body.scrollHeight+20)+'px';"  src="https://pro.ispringcloud.com/acc/0dBmDbE0ODAyMA/s/48020-M12rY-vxDh4-NSGe4?mail_id=31&tx=0&from=email" frameborder="0" border="0" allowtransparency="true" allowfullscreen="1" style="border: none; background-color: transparent; width: 100%; height:600px; overflow:auto"></iframe>
                 </div>
             </div>
         </div>
     </div>
+    </br>
 </div>
 
